# Wattile_Examples

./: .gitignore  README.md  pyproject.toml
data/Headquarters/: Headquarters Config.json  Headquarters Predictors.csv  Headquarters Targets.csv
data/configs/: configs.json
ex-1-skyspark-demo/: README.md
ex-1-skyspark-demo/data/Headquarters/: Headquarters Config.json  Headquarters Targets.csv
ex-1-skyspark-demo/data/configs/: model-1.config.json
ex-1-skyspark-demo/models/headquarters-electricity/: configs.json  metadata.json  predictions.h5  torch_model
ex-1-skyspark-demo/models/model-1/: configs.json  predictions.h5
ex-1-skyspark-demo/notebooks/: predict.ipynb  train.ipynb
ex1-skyspark-demo/: README.md
ex1-skyspark-demo/models/model-1/: QQ_data.h5  configs.json  error_stats_train.json  internal_test.h5  mask.h5  measured.h5  mid_train_error_stats.h5  output.out  predictions.h5  predictors_target_config.json  residual_distribution.h5  train_stats.json
ex1-skyspark-demo/notebooks/: predict.ipynb  train.ipynb
ex1-skyspark-demo/notebooks/examples/exp_dir/: QQ_data.h5  configs.json  measured.h5  mid_train_error_stats.h5  output.out  residual_distribution.h5  torch_model
notebooks/: Training_history.csv  train.ipynb
notebooks/examples/exp_dir/: configs.json  error_stats_train.json  events.out.tfevents.1722974066.jsmith2-39040s.49246.0  events.out.tfevents.1726501571.jsmith2-39040s.47458.0  internal_test.h5  mask.h5  output.out  predictions.h5  torch_model  train_stats.json
(+14 files in other folders)
