[tool.poetry]
name = "wattile-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
mlflow = "^2.15.0"
wattile = {path = "/Users/jsmith2/Code/@ic/Wattile", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
