[tool.poetry]
name = "wattile-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
mlflow = "^2.15.1"
wattile = {path = "/Users/jsmith2/Code/@ic/Wattile", develop = true}
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
